Did some stuff i guess haha

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,40 +3,41 @@ import NavBar from "../components/NavBar.astro";
 import Layout from "../layouts/Layout.astro";
 import PersonCard from "../components/PersonCard.astro";
 import Footer from "../components/Footer.astro";
-
+import {judges} from "../controller/controller.jsx"
+console.log(judges)
 // imageUrl, name, company, about
-const judges = [
-  {
-    imageUrl: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZs9kesB69Ye4TEPKKWwEXfYoU2Jjgm-jBxQ&s",
-    name: "Olajide Olatunji",
-    company: "KSI Enterprises",
-    about: "Olajide Olatunji, better known as KSI, is a renowned YouTuber, musician, and entrepreneur. He is a co-founder of Prime Hydration and a prominent figure in the entertainment and boxing industries.",
-  },
-  {
-    imageUrl: "https://i1.sndcdn.com/artworks-34AdqSgiaJECagN3-Y3mBdw-t500x500.jpg",
-    name: "Hailey Welch",
-    company: "Talk Tuah",
-    about: "Hailey Welch is an advocate for sustainable living and plant-based diets. She is a notable writer and editor focusing on healthy eating and lifestyle transformation.",
-  },
-  {
-    imageUrl: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLEmn6-HEPsb9nshsNU6f8EuMurlWSdZYnDa4TFhqm1LWt0VFSWu7I8kgyVlMbHkuAU3Q&usqp=CAU",
-    name: "Jimmy Donaldson",
-    company: "MrBeast Productions",
-    about: "Jimmy Donaldson, popularly known as MrBeast, is a groundbreaking content creator and philanthropist. He is known for his innovative YouTube videos and large-scale charitable initiatives.",
-  },
-  {
-    imageUrl: "https://pbs.twimg.com/media/F_cPz1rW8AA9wL8.jpg",
-    name: "Isis Naija Gaston",
-    company: "Rapper",
-    about: "Isis Naija Gaston, professionally known as Ice Spice, is a rising star in the rap industry. Her unique sound and style have garnered widespread recognition and acclaim.",
-  },
-  {
-    imageUrl: "https://i.imgflip.com/4akqi2.png",
-    name: "Nigel Ng",
-    company: "Uncle Roger Comedy",
-    about: "Nigel Ng is a comedian and content creator famous for his character Uncle Roger. His comedic commentary on Asian cuisine has made him a global sensation.",
-  },
-];
+// const judges = [
+//   {
+//     imageUrl: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZs9kesB69Ye4TEPKKWwEXfYoU2Jjgm-jBxQ&s",
+//     name: "Olajide Olatunji",
+//     company: "KSI Enterprises",
+//     about: "Olajide Olatunji, better known as KSI, is a renowned YouTuber, musician, and entrepreneur. He is a co-founder of Prime Hydration and a prominent figure in the entertainment and boxing industries.",
+//   },
+//   {
+//     imageUrl: "https://i1.sndcdn.com/artworks-34AdqSgiaJECagN3-Y3mBdw-t500x500.jpg",
+//     name: "Hailey Welch",
+//     company: "Talk Tuah",
+//     about: "Hailey Welch is an advocate for sustainable living and plant-based diets. She is a notable writer and editor focusing on healthy eating and lifestyle transformation.",
+//   },
+//   {
+//     imageUrl: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLEmn6-HEPsb9nshsNU6f8EuMurlWSdZYnDa4TFhqm1LWt0VFSWu7I8kgyVlMbHkuAU3Q&usqp=CAU",
+//     name: "Jimmy Donaldson",
+//     company: "MrBeast Productions",
+//     about: "Jimmy Donaldson, popularly known as MrBeast, is a groundbreaking content creator and philanthropist. He is known for his innovative YouTube videos and large-scale charitable initiatives.",
+//   },
+//   {
+//     imageUrl: "https://pbs.twimg.com/media/F_cPz1rW8AA9wL8.jpg",
+//     name: "Isis Naija Gaston",
+//     company: "Rapper",
+//     about: "Isis Naija Gaston, professionally known as Ice Spice, is a rising star in the rap industry. Her unique sound and style have garnered widespread recognition and acclaim.",
+//   },
+//   {
+//     imageUrl: "https://i.imgflip.com/4akqi2.png",
+//     name: "Nigel Ng",
+//     company: "Uncle Roger Comedy",
+//     about: "Nigel Ng is a comedian and content creator famous for his character Uncle Roger. His comedic commentary on Asian cuisine has made him a global sensation.",
+//   },
+// ];
 
 ---
 <Layout title="VeeHac">
@@ -50,7 +51,7 @@ const judges = [
             <div class="judge-cards">
                 {
                     judges.map((judge, index) => (
-                        <PersonCard imageUrl={judge.imageUrl} name={judge.name} company={judge.company} about={judge.about} />
+                        <PersonCard imageUrl={judge.imageURL} name={judge.name} company={judge.company} about={judge.about} />
                     ))
                 }
             </div>
