--- a/src/styles/TeamInfo.css
+++ b/src/styles/TeamInfo.css
@@ -1,32 +1,33 @@
-.body {
+.team-info__body {
     height: 100%;
     max-height: 600px; /* Set a maximum height */
     color: white;
     border-radius: 8px;
   }
   
-  .body p {
+  .team-info__body p {
     font-size: 1rem;
     margin: 0.25rem;
     align-items: center;
     flex-direction: column;
   }
   
-  .rectangle-container {
+  .team-info__rectangle-container {
     font-size: 1rem;
     display: flex;
     gap: 20px; /* Increase the gap between the rectangles */
     margin-bottom: 0%;
   }
   
-  .rectangle {
+  .team-info__rectangle {
     flex: 1; /* Make the rectangles take equal space */
     padding: 1rem;
     background-color: #433f6c; /* Example background color */
     border-radius: 8px; /* Example border radius */
   }
   
-  .full-width-underline {
+  .team-info__full-width-underline {
+    position: relative; /* Add this line */
     color: black;
     display: block;
     font-size: 1.5rem;
@@ -35,7 +36,7 @@
     margin-bottom: 1rem;
   }
   
-  .full-width-underline::after {
+  .team-info__full-width-underline::after {
     content: "";
     position: absolute;
     left: 0;
