--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -13,7 +13,13 @@ import Layout from "../layouts/Layout.astro";
       <form id="form">
         <div class="input-row">
           <Icon size={24} name="fa6-solid:envelope" />
-          <input type="email" id="email" name="email" placeholder="Email" required />
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email"
+            required
+          />
         </div>
         <div class="input-row">
           <Icon size={24} name="fa6-solid:lock" />
@@ -39,56 +45,81 @@ import Layout from "../layouts/Layout.astro";
 </Layout>
 
 <script>
-  const emailList = [
-    {
-      email: "admin@veehac.com",
-      role: "admin",
-    },
-    {
-      email: "judge@veehac.com",
-      role: "judge",
-    },
-    {
-      email: "olajide@prime.com",
-      role: "judge",
-    },
-    {
-      email: "hailey@htuah.com",
-      role: "judge",
-    },
-    {
-      email: "jimmy@mrbeast.com",
-      role: "judge",
-    },
-    {
-      email: "naija@spice.com",
-      role: "judge",
-    },
-    {
-      email: "uncle@roger.com",
-      role: "judge",
-    },
-  ]
+  import {
+    sendEmailVerification,
+    signInWithEmailAndPassword,
+  } from "firebase/auth";
+  import { auth, db } from "../firebase";
+  import { doc, getDoc } from "firebase/firestore";
+
   document.querySelector("#form")?.addEventListener("submit", (e) => {
     e.preventDefault();
     const email = (document.querySelector("#email") as HTMLInputElement).value;
-    
-    const user = emailList.find((user) => user.email === email);
-    if (user) {
-      if (user.role === "admin") {
-        localStorage.setItem("role", "admin");
-        window.location.href = "/admin";
-      } else if (user.role === "judge") {
-        localStorage.setItem("role", "judge");
-        window.location.href = "/judge-dashboard";
-      } else {
-        localStorage.setItem("role", "participant");
-        window.location.href = "/participant-dashboard";
-      }
-    } else {
-      localStorage.setItem("role", "participant");
-      window.location.href = "/participant-dashboard";
-    }
+    const password = (document.querySelector("#password") as HTMLInputElement)
+      .value;
+
+    signInWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        const user = userCredential.user;
+
+        getDoc(doc(db, "participant", user.uid))
+          .then((ref) => {
+            if (ref.exists()) {
+              if (!user.emailVerified) {
+                sendEmailVerification(user)
+                  .then(() => {
+                    alert(
+                      "Verification email sent. Please verify your email before logging in."
+                    );
+                  })
+                  .catch((error) => {
+                    console.log("Error sending verification email:", error);
+                    alert(`Error sending verification email: ${error.message}`);
+                  });
+              } else {
+                window.location.href = "/participant-dashboard";
+              }
+            } else {
+              getDoc(doc(db, "judges", user.uid))
+                .then((ref) => {
+                  if (ref.exists()) {
+                    window.location.href = "/judge-dashboard";
+                  } else {
+                    getDoc(doc(db, "admin", user.uid))
+                      .then((ref) => {
+                        if (ref.exists()) {
+                          window.location.href = "/admin-dashboard";
+                        } else {
+                          alert("User not found.");
+                        }
+                      })
+                      .catch((error) => {
+                        console.log("Error getting document:", error);
+                        alert(`Error getting document: ${error.message}`);
+                      });
+                  }
+                })
+                .catch((error) => {
+                  console.log("Error getting document:", error);
+                  alert(`Error getting document: ${error.message}`);
+                });
+            }
+          })
+          .catch((error) => {
+            console.log("Error getting document:", error);
+            alert(`Error getting document: ${error.message}`);
+          });
+      })
+      .catch((error) => {
+        const errorCode = error.code;
+        const errorMessage = error.message;
+        if (errorCode === "auth/invalid-credential") {
+          alert("Invalid email or password.");
+        } else {
+          alert(errorMessage);
+        }
+        console.log(errorCode, errorMessage);
+      });
   });
 </script>
 
