--- a/src/styles/ProjectSubmission.css
+++ b/src/styles/ProjectSubmission.css
@@ -31,7 +31,8 @@
 .body-submission p {
   font-size: 1rem;
   align-items: center;
-  margin-top: 0rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   flex-direction: column;
 }
 
