--- a/src/pages/judge-dashboard.astro
+++ b/src/pages/judge-dashboard.astro
@@ -15,7 +15,25 @@ import JudgeDashboardParent from "../components/JudgeDashboardParent";
 </div>
 </Layout>
 
-
+<script>
+  import { doc, getDoc } from "firebase/firestore";
+  import { auth, db } from "../firebase";
+  
+    document.addEventListener('DOMContentLoaded', function() {
+      auth.onAuthStateChanged((user) => {
+        if (!user) {
+          window.location.href = "/login";
+        } else {
+          getDoc(doc(db, "judges", user.uid)).then((doc) => {
+            if (!doc.exists()) {
+              alert("You are not authorized to access this page!");
+              window.location.href = "/login";
+            }
+          });
+        }
+      });
+    });
+</script>
 
 <style>
   .body {
